--- a/30-ThreeNumberSum.ipynb
+++ b/30-ThreeNumberSum.ipynb
@@ -13,9 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Time complexity: O(n^2)\n",
-    "## Space Complexity: O(n)\n",
-    "## Aproach Used: Two Pointers"
+    "#### Time complexity: O(n^2)\n",
+    "#### Space Complexity: O(n)\n",
+    "Aproach Used: Two Pointers"
    ]
   },
   {
