--- a/31-SmallestDifference.ipynb
+++ b/31-SmallestDifference.ipynb
@@ -13,9 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Time Complexity: O(nlog(n)+mlog(n))\n",
-    "## Space Complexity: O(1)\n",
-    "### Here, n is the length of the first input array and m is the length of teh second input array."
+    "#### Time Complexity: O(nlog(n)+mlog(n))\n",
+    "#### Space Complexity: O(1)\n",
+    "Here, n is the length of the first input array and m is the length of teh second input array."
    ]
   },
   {
